{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 378,
  "lineage": "a9003a15-c65c-8c50-e7fb-121715e1bece",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:514009209955:transit-gateway/tgw-024e3f4bbe87fa8c4",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "disable",
            "description": "Transit gateway for vpcA \u0026 vpcB",
            "dns_support": "enable",
            "id": "tgw-024e3f4bbe87fa8c4",
            "multicast_support": "disable",
            "owner_id": "514009209955",
            "tags": {
              "Name": "TransitGateway-1"
            },
            "tags_all": {
              "Name": "TransitGateway-1"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "tg1-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:transit-gateway-route-table/tgw-rtb-0d133dc80c3b6b0d1",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0d133dc80c3b6b0d1",
            "tags": {
              "Name": "TransitGateway-RT"
            },
            "tags_all": {
              "Name": "TransitGateway-RT"
            },
            "transit_gateway_id": "tgw-024e3f4bbe87fa8c4"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tg1-assocc-vpcA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0d133dc80c3b6b0d1_tgw-attach-0f905ea93dee255d9",
            "resource_id": "vpc-0f3d51d4296ef6822",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0f905ea93dee255d9",
            "transit_gateway_route_table_id": "tgw-rtb-0d133dc80c3b6b0d1"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_ec2_transit_gateway_route_table.tg1-RT",
            "aws_ec2_transit_gateway_vpc_attachment.tg1-attach-vpcA",
            "aws_subnet.vpcA-websubnet1",
            "aws_vpc.vpcA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "tg1-assocc-vpcB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0d133dc80c3b6b0d1_tgw-attach-0a3609e1332df0bd7",
            "resource_id": "vpc-06f94e926d78ba01a",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0a3609e1332df0bd7",
            "transit_gateway_route_table_id": "tgw-rtb-0d133dc80c3b6b0d1"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_ec2_transit_gateway_route_table.tg1-RT",
            "aws_ec2_transit_gateway_vpc_attachment.tg1-attach-vpcB",
            "aws_subnet.vpcB-websubnet1",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tg1-propag-vpcA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0d133dc80c3b6b0d1_tgw-attach-0f905ea93dee255d9",
            "resource_id": "vpc-0f3d51d4296ef6822",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0f905ea93dee255d9",
            "transit_gateway_route_table_id": "tgw-rtb-0d133dc80c3b6b0d1"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_ec2_transit_gateway_route_table.tg1-RT",
            "aws_ec2_transit_gateway_vpc_attachment.tg1-attach-vpcA",
            "aws_subnet.vpcA-websubnet1",
            "aws_vpc.vpcA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "tg1-propag-vpcB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0d133dc80c3b6b0d1_tgw-attach-0a3609e1332df0bd7",
            "resource_id": "vpc-06f94e926d78ba01a",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-0a3609e1332df0bd7",
            "transit_gateway_route_table_id": "tgw-rtb-0d133dc80c3b6b0d1"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_ec2_transit_gateway_route_table.tg1-RT",
            "aws_ec2_transit_gateway_vpc_attachment.tg1-attach-vpcB",
            "aws_subnet.vpcB-websubnet1",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tg1-attach-vpcA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0f905ea93dee255d9",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0980b0d9f18f6cf9d"
            ],
            "tags": {
              "Name": "TG1-attach-vpcA"
            },
            "tags_all": {
              "Name": "TG1-attach-vpcA"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-024e3f4bbe87fa8c4",
            "vpc_id": "vpc-0f3d51d4296ef6822",
            "vpc_owner_id": "514009209955"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_subnet.vpcA-websubnet1",
            "aws_vpc.vpcA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tg1-attach-vpcB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0a3609e1332df0bd7",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0933ce36b557be35b"
            ],
            "tags": {
              "Name": "TG1-attach-vpcB"
            },
            "tags_all": {
              "Name": "TG1-attach-vpcB"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-024e3f4bbe87fa8c4",
            "vpc_id": "vpc-06f94e926d78ba01a",
            "vpc_owner_id": "514009209955"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_subnet.vpcB-websubnet1",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpcA-EIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c5cb704b03ce560",
            "associate_with_private_ip": "1.0.10.23",
            "association_id": "eipassoc-0972e6c04cfb8cf87",
            "domain": "vpc",
            "id": "eipalloc-09c5cb704b03ce560",
            "instance": "i-0bd80da45411baa64",
            "network_border_group": "us-east-1",
            "network_interface": "eni-017fa6827ad7da94a",
            "private_dns": "ip-1-0-10-23.ec2.internal",
            "private_ip": "1.0.10.23",
            "public_dns": "ec2-54-209-226-13.compute-1.amazonaws.com",
            "public_ip": "54.209.226.13",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.vpcA-IGW",
            "aws_network_interface.vpcA-NIC1",
            "aws_security_group.vpcA-websg",
            "aws_subnet.vpcA-websubnet1",
            "aws_vpc.vpcA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpcB-EIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066e7019fcb614f0b",
            "associate_with_private_ip": "2.0.20.23",
            "association_id": "eipassoc-0eb9196f8642ecda5",
            "domain": "vpc",
            "id": "eipalloc-066e7019fcb614f0b",
            "instance": "i-046ca2168a4b83985",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03c967941c1a9fea2",
            "private_dns": "ip-2-0-20-23.ec2.internal",
            "private_ip": "2.0.20.23",
            "public_dns": "ec2-44-195-99-252.compute-1.amazonaws.com",
            "public_ip": "44.195.99.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.vpcB-IGW",
            "aws_network_interface.vpcB-NIC1",
            "aws_security_group.vpcB-websg",
            "aws_subnet.vpcB-websubnet1",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpcA-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:514009209955:instance/i-0bd80da45411baa64",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd80da45411baa64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "NOVA_KP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-017fa6827ad7da94a"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-017fa6827ad7da94a",
            "private_dns": "ip-1-0-10-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "1.0.10.23",
            "public_dns": "ec2-54-209-226-13.compute-1.amazonaws.com",
            "public_ip": "54.209.226.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09d008423bdce30d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0980b0d9f18f6cf9d",
            "tags": {
              "Name": "ec2vpcA"
            },
            "tags_all": {
              "Name": "ec2vpcA"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-053352381f793c4a7"
            ]
          },
          "dependencies": [
            "aws_eip.vpcA-EIP1",
            "aws_internet_gateway.vpcA-IGW",
            "aws_network_interface.vpcA-NIC1",
            "aws_security_group.vpcA-websg",
            "aws_subnet.vpcA-websubnet1",
            "aws_vpc.vpcA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpcB-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:514009209955:instance/i-046ca2168a4b83985",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046ca2168a4b83985",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "NOVA_KP",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-03c967941c1a9fea2"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c967941c1a9fea2",
            "private_dns": "ip-2-0-20-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "2.0.20.23",
            "public_dns": "ec2-44-195-99-252.compute-1.amazonaws.com",
            "public_ip": "44.195.99.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00b408e37b8d760e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0933ce36b557be35b",
            "tags": {
              "Name": "ec2vpcB"
            },
            "tags_all": {
              "Name": "ec2vpcB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06cdfa894425ebe6c"
            ]
          },
          "dependencies": [
            "aws_eip.vpcB-EIP1",
            "aws_internet_gateway.vpcB-IGW",
            "aws_network_interface.vpcB-NIC1",
            "aws_security_group.vpcB-websg",
            "aws_subnet.vpcB-websubnet1",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpcA-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:internet-gateway/igw-09ad83d69f3e2cecb",
            "id": "igw-09ad83d69f3e2cecb",
            "owner_id": "514009209955",
            "tags": {
              "Name": "VPC-A-IGW"
            },
            "tags_all": {
              "Name": "VPC-A-IGW"
            },
            "vpc_id": "vpc-0f3d51d4296ef6822"
          },
          "dependencies": [
            "aws_vpc.vpcA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpcB-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:internet-gateway/igw-0e98a8b2ee42c82fd",
            "id": "igw-0e98a8b2ee42c82fd",
            "owner_id": "514009209955",
            "tags": {
              "Name": "VPC-B-IGW"
            },
            "tags_all": {
              "Name": "VPC-B-IGW"
            },
            "vpc_id": "vpc-06f94e926d78ba01a"
          },
          "dependencies": [
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vpcA-NIC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:network-interface/eni-017fa6827ad7da94a",
            "attachment": [
              {
                "attachment_id": "eni-attach-0679f57287e86575a",
                "device_index": 0,
                "instance": "i-0bd80da45411baa64"
              }
            ],
            "id": "eni-017fa6827ad7da94a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:77:8a:d2:81:9f",
            "owner_id": "514009209955",
            "private_dns_name": "ip-1-0-10-23.ec2.internal",
            "private_ip": "1.0.10.23",
            "private_ip_list": [
              "1.0.10.23"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "1.0.10.23"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-053352381f793c4a7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0980b0d9f18f6cf9d"
          },
          "dependencies": [
            "aws_security_group.vpcA-websg",
            "aws_subnet.vpcA-websubnet1",
            "aws_vpc.vpcA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vpcB-NIC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:network-interface/eni-03c967941c1a9fea2",
            "attachment": [
              {
                "attachment_id": "eni-attach-0e7f93de545fb8c41",
                "device_index": 0,
                "instance": "i-046ca2168a4b83985"
              }
            ],
            "id": "eni-03c967941c1a9fea2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:44:67:af:fe:9b",
            "owner_id": "514009209955",
            "private_dns_name": "ip-2-0-20-23.ec2.internal",
            "private_ip": "2.0.20.23",
            "private_ip_list": [
              "2.0.20.23"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "2.0.20.23"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06cdfa894425ebe6c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0933ce36b557be35b"
          },
          "dependencies": [
            "aws_security_group.vpcB-websg",
            "aws_subnet.vpcB-websubnet1",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpcA-webtier-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:route-table/rtb-0db80890814cffab6",
            "id": "rtb-0db80890814cffab6",
            "owner_id": "514009209955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ad83d69f3e2cecb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "2.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-024e3f4bbe87fa8c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-A_WEB_RT"
            },
            "tags_all": {
              "Name": "VPC-A_WEB_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3d51d4296ef6822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_internet_gateway.vpcA-IGW",
            "aws_vpc.vpcA",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpcB-webtier-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:route-table/rtb-0b15fffbaebb70e32",
            "id": "rtb-0b15fffbaebb70e32",
            "owner_id": "514009209955",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e98a8b2ee42c82fd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "1.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-024e3f4bbe87fa8c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC-B_WEB_RT"
            },
            "tags_all": {
              "Name": "VPC-B_WEB_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f94e926d78ba01a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_internet_gateway.vpcB-IGW",
            "aws_vpc.vpcA",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0933c00e8dd089d91",
            "route_table_id": "rtb-0db80890814cffab6",
            "subnet_id": "subnet-0980b0d9f18f6cf9d"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_internet_gateway.vpcA-IGW",
            "aws_route_table.vpcA-webtier-route-table",
            "aws_subnet.vpcA-websubnet1",
            "aws_vpc.vpcA",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02db8e2fd5ca5b4fe",
            "route_table_id": "rtb-0b15fffbaebb70e32",
            "subnet_id": "subnet-0933ce36b557be35b"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tg1",
            "aws_internet_gateway.vpcB-IGW",
            "aws_route_table.vpcB-webtier-route-table",
            "aws_subnet.vpcB-websubnet1",
            "aws_vpc.vpcA",
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpcA-websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:security-group/sg-053352381f793c4a7",
            "description": "Allow SSH,HTTP,HTTPS,ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053352381f793c4a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "2.0.0.0/16"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "vpcA_instance_SG",
            "name_prefix": "",
            "owner_id": "514009209955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPCA_Instance_SG_WEB"
            },
            "tags_all": {
              "Name": "VPCA_Instance_SG_WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3d51d4296ef6822"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpcB-websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:security-group/sg-06cdfa894425ebe6c",
            "description": "Allow SSH,HTTP,HTTPS,ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cdfa894425ebe6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "1.0.0.0/16"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "vpcB_instance_SG",
            "name_prefix": "",
            "owner_id": "514009209955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPCB_Instance_SG_WEB"
            },
            "tags_all": {
              "Name": "VPCB_Instance_SG_WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f94e926d78ba01a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpcA-websubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:subnet/subnet-0980b0d9f18f6cf9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "1.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0980b0d9f18f6cf9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "514009209955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpcA-websubnet1"
            },
            "tags_all": {
              "Name": "vpcA-websubnet1"
            },
            "vpc_id": "vpc-0f3d51d4296ef6822"
          },
          "dependencies": [
            "aws_vpc.vpcA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpcB-websubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:subnet/subnet-0933ce36b557be35b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "2.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0933ce36b557be35b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "514009209955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpcB-websubnet1"
            },
            "tags_all": {
              "Name": "vpcB-websubnet1"
            },
            "vpc_id": "vpc-06f94e926d78ba01a"
          },
          "dependencies": [
            "aws_vpc.vpcB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:vpc/vpc-0f3d51d4296ef6822",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "1.0.0.0/16",
            "default_network_acl_id": "acl-024b093684a3f6f13",
            "default_route_table_id": "rtb-0170bf186172f1795",
            "default_security_group_id": "sg-0bb1628febed06550",
            "dhcp_options_id": "dopt-07867bf5ebf0c7a48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3d51d4296ef6822",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0170bf186172f1795",
            "owner_id": "514009209955",
            "tags": {
              "Name": "VPC-A"
            },
            "tags_all": {
              "Name": "VPC-A"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:514009209955:vpc/vpc-06f94e926d78ba01a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "2.0.0.0/16",
            "default_network_acl_id": "acl-09295c316b925e5f0",
            "default_route_table_id": "rtb-09f7aa49c4e468daf",
            "default_security_group_id": "sg-04d64d9b2623d0f31",
            "dhcp_options_id": "dopt-07867bf5ebf0c7a48",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f94e926d78ba01a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09f7aa49c4e468daf",
            "owner_id": "514009209955",
            "tags": {
              "Name": "VPC-B"
            },
            "tags_all": {
              "Name": "VPC-B"
            }
          }
        }
      ]
    }
  ]
}